hexagonal/src/main/java/com/example/hexagonal/common/error/NotFoundResourceException.java
package com.example.hexagonal.common.error;

public class NotFoundResourceException extends BusinessException{

  public NotFoundResourceException() {
  }

  public NotFoundResourceException(String message) {
    super(message, 404);
  }
}
